<resources>
    <string name="user_connected">Unknown</string>
    <string name="app_name">Ski seller</string>
    <string name="title_home">Home</string>
    <string name="title_products">Products</string>
    <string name="title_myOrders">My orders</string>
    <string name="title_reservations">Reservations</string>
    <string name="title_findUs">Find us</string>
    <string name="title_settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="position">Share your position</string>
    <string name="displayProducts">Display products</string>
    <string name="create">Create</string>
    <string name="brands">Brands</string>
    <string name="newsletter">Newsletter</string>
    <string name="discounts">Show products discounts</string>
    <string name="rossignol">Rossignol / 180-189cm / 600.-</string>
    <string name="showDetails">Details</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Invalid login credentials</string>
    <string name="error_used_email">Email already in use</string>
    <string name="error_invalid_password">This password is too short (&lt;5 characters)</string>
    <string name="error_edit_invalid_password">You need to specify a password</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_demo_data">Reset Demo Data</string>
    <string name="client_created">Client created</string>
    <string name="action_register">Register</string>
    <string name="client_name">Last Name</string>
    <string name="client_firstName">First Name</string>
    <string name="client_repeat_password">Repeat Password</string>
    <string name="product_name">Product name</string>
    <string name="product_color">Color</string>
    <string name="product_price">Price</string>
    <string name="title_fragment_details">Product Details</string>
    <string name="title_fragment_create">Create Product</string>
    <string name="error_used_product_name">Product name already in use</string>
    <string name="error_invalid_product_name">Invalid product name address</string>
    <string name="action_error">Something went wrong</string>
    <string name="product_edited">Product edited</string>
    <string name="product_add">Add</string>
    <string name="product_edit">Edit</string>
    <string name="product_delete">Delete</string>
    <string name="product_edit_save">Save changes</string>
    <string name="delete_msg">Do you really want to delete this client?</string>
    <string name="action_cancel">Cancel</string>
    <string name="product_place_order">Place order</string>
    <string name="product_error_delete">Action dismissed</string>
    <string name="product_msg_error_delete">You cannot delete this product because it is contained in an order</string>
    <string name="order_id">Order #ID</string>
    <string name="order_date">Order date</string>
    <string name="order_idProduct">Product #ID</string>
    <string name="order_idClient">Email</string>
    <string name="order_delete">Delete order</string>
    <string name="order_created">Order successfully created</string>
    <string name="order_product_info">Product information</string>
    <string name="order_message_empty">No order found</string>
    <string name="order_title_order_info">Order information</string>
    <string name="order_title_product_info">Product information</string>
    <string-array name="skiBrands">
        <item>All brands</item>
        <item>Rossignol</item>
        <item>K2</item>
        <item>Fisher</item>
        <item>Salomon</item>
        <item>Head</item>
    </string-array>
    <string-array name="filterBy">
        <item>Filter by</item>
        <item>Increasing price</item>
        <item>Decreasing price</item>
    </string-array>
    <string-array name="type">
        <item>Type</item>
        <item>Current ski</item>
        <item>Downhill ski</item>
        <item>Slalom ski</item>
    </string-array>
    <string-array name="location">
        <item>Location</item>
        <item>Anzère</item>
        <item>Verbier</item>
    </string-array>
    <string-array name="size">
        <item>Size</item>
        <item>150-159</item>
        <item>160-169</item>
        <item>170-179</item>
        <item>180-189</item>
        <item>190-199</item>
        <item>200-209</item>
    </string-array>
    <string name="title_activity_display_products">displayProducts</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_t_e_s_t">TEST</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="verbier">Verbier</string>
    <string name="anzere">Anzère</string>
    <string name="darkMode">Dark mode</string>
    <string name="ourStock">OUR STOCK</string>
    <string name="us">US</string>
    <string name="aurelien">AURELIEN</string>
    <string name="brice">BRICE</string>
    <string name="name_aurelien">Aurélien May</string>
    <string name="mail_aurelien">aurelien.may@students.hevs.ch</string>
    <string name="github_aurelien">aurelienmay</string>
    <string name="project_name">Ski Seller Project</string>
    <string name="mail_brice">brice.berclaz@students.hevs.ch</string>
    <string name="github_brice">Bearbrice</string>
    <string name="name_brice">Brice Berclaz</string>
    <string name="settings_about_us">We are students in HES-SO Valais-Wallis and our task was to do an android application with the Ski Seller theme.</string>
</resources>